--- a/gallery.html
+++ b/gallery.html
@@ -217,21 +217,21 @@ h1 {
 <div class="row">
   <div class="column nature">
     <div class="content">
-      <img src="/images/Aeroponics/1st System.PNG" alt="Mountains" style="width:100%">
+      <img src="/images/1st System.PNG" alt="Mountains" style="width:100%">
       <h4>1st System</h4>
       <p>Made at Trestor during Internship Semester</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/2ndSystem.jpg" alt="Lights" style="width:100%">
+    <img src="/images/2ndSystem.jpg" alt="Lights" style="width:100%">
       <h4>2nd System</h4>
       <p>Advanced version of 1st System</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/3rdSystem.png" alt="Nature" style="width:100%">
+    <img src="/images/3rdSystem.png" alt="Nature" style="width:100%">
       <h4>3rd System</h4>
       <p>Made for 4th Year College Project</p>
     </div>
@@ -239,28 +239,28 @@ h1 {
 
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/4thSystem.PNG" alt="Nature" style="width:100%">
+    <img src="/images/4thSystem.PNG" alt="Nature" style="width:100%">
       <h4>4th System</h4>
       <p>Made for 4th Year College Project</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/5thSystem.jpg" alt="Nature" style="width:100%">
+    <img src="/images/5thSystem.jpg" alt="Nature" style="width:100%">
       <h4>5th System</h4>
       <p>Sold this system with door to door campaign</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/6thSystem.jpg" alt="Nature" style="width:100%">
+    <img src="/images/6thSystem.jpg" alt="Nature" style="width:100%">
       <h4>6th System</h4>
       <p>1st System Made in Chile</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/images/Aeroponics/7thSystem.jpg" alt="Nature" style="width:100%; height: auto;">
+    <img src="/images/7thSystem.jpg" alt="Nature" style="width:100%; height: auto;">
       <h4>7th System</h4>
       <p>2nd System Made in Chile</p>
     </div>
@@ -276,21 +276,21 @@ h1 {
   
   <div class="column cars">
     <div class="content">
-      <img src="/images/Happy Plug/hp1.jpg" alt="Car" style="width:100%">
+      <img src="/images/hp1.jpg" alt="Car" style="width:100%">
       <h4>1st Prototype</h4>
       <p>1st functional prototype of a Smart Plug</p>
     </div>
   </div>
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp2.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp2.jpg" alt="Car" style="width:100%">
       <h4>2nd Prototype</h4>
       <p>Improved Version of the 1st prototype</p>
     </div>
   </div>
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp3.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp3.jpg" alt="Car" style="width:100%">
       <h4>3rd Prototype</h4>
       <p>Improved Casing</p>
     </div>
@@ -300,7 +300,7 @@ h1 {
 
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp4.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp4.jpg" alt="Car" style="width:100%">
       <h4>3rd Prototype functional</h4>
       <p>Attached to socket in Wall</p>
     </div>
@@ -308,7 +308,7 @@ h1 {
 
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp5.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp5.jpg" alt="Car" style="width:100%">
       <h4>Photoshoot</h4>
       <p>Marketing Picture</p>
     </div>
@@ -316,7 +316,7 @@ h1 {
 
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp6.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp6.jpg" alt="Car" style="width:100%">
       <h4>All Designs</h4>
       <p>All designs on manufactuting table</p>
     </div>
@@ -324,7 +324,7 @@ h1 {
 
   <div class="column cars">
     <div class="content">
-    <img src="/images/Happy Plug/hp7.jpg" alt="Car" style="width:100%">
+    <img src="/images/hp7.jpg" alt="Car" style="width:100%">
       <h4>Latest Design 2016</h4>
       <p>Final design before moving to Aeroponics</p>
     </div>
@@ -334,7 +334,7 @@ h1 {
     <div class="content">
     
 
-  <img id="myImg" src="/images/Aeroponics/MarketingBrochureS5.jpg" alt="Marketing Brochure" style="width:100%;max-width:300px">
+  <img id="myImg" src="/images/MarketingBrochureS5.jpg" alt="Marketing Brochure" style="width:100%;max-width:300px">
 
   <!-- The Modal -->
   <div id="myModal" class="modal">
