--- a/gallery.html
+++ b/gallery.html
@@ -348,8 +348,8 @@ h1 {
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
   </div>
-  <h4>Marketing Brochure</h4>
-  <p>Designed in Photoshop</p>
+  <h4>Marketing Brochure Aeroponics</h4>
+  <p>Brochure for door to door campaign for Aeroponics</p>
 </div>
 </div>
 
