--- a/app1.html
+++ b/app1.html
@@ -112,7 +112,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Apps Showcase</a></li>
 							<li ><a href="cv.html">Curriculum Vitae</a></li>
-							<li><a href="elements.html">My Story/Cover Letter</a></li>
+							<li><a href="coverLetter.html">My Story/Cover Letter</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/satinder.sandhu.583" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
