--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Apps Showcase</a></li>
 							<li><a href="cv.html">Curriculum Vitae</a></li>
-							<li><a href="elements.html">Cover Letter/My Story</a></li>
+							<li><a href="coverLetter.html">Cover Letter/My Story</a></li>
 						</ul>
 						<ul class="icons">
 							
