--- a/coverLetter.html
+++ b/coverLetter.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">APPS SHOWCASE</a></li>
 							<li><a href="cv.html">Curriculum Vitae</a></li>
-							<li class="active"><a href="elements.html">COVER LETTER/MY STORY</a></li>
+							<li class="active"><a href="coverLetter.html">COVER LETTER/MY STORY</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/satinder.sandhu.583" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
