--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
 						<ul class="links">
 							<li><a href="index.html">Apps Showcase</a></li>
 							<li class="active"><a href="cv.html">Curriculum Vitae</a></li>
-							<li><a href="coverLetter.html">My Story/Cover Letter</a></li>
+							<li><a href="coverletter.html">Apps Showcase</a></li>
 							
 						</ul>
 						<ul class="icons">
